# file-manager-FileFlow

./: LICENSE  README.md
FileFlow/: index.html  package-lock.json  package.json
FileFlow/public/: index.html
FileFlow/public/assets/: index-BLCnhWdk.css  index-BRcUkzCH.js
FileFlow/src/: App.tsx  main.tsx  styles.scss
FileFlow/src-tauri/: Cargo.toml  tauri.conf.json
FileFlow/src-tauri/.cargo/: config.toml
FileFlow/src-tauri/capabilities/: main-capability.json
FileFlow/src-tauri/icons/: icon.icns
FileFlow/src-tauri/src/: file_management.rs  file_transfer.rs  lib.rs  main.rs  miscellaneous.rs
FileFlow/src-tauri/src/file_management/: conversion.rs  create.rs  delete.rs  mod.rs  read.rs  update.rs  watcher.rs
FileFlow/src-tauri/src/file_management/types/: mod.rs
FileFlow/src-tauri/src/file_transfer/: handler.rs  helper.rs  mod.rs  receive.rs  send.rs
FileFlow/src-tauri/src/file_transfer/types/: mod.rs  serverconfig.rs
FileFlow/src/core/pages/home/: HomePage.tsx  (+1 more)
FileFlow/src/core/services/: conversion.ts  fileManagement.ts  fileTransfer.ts  listener.ts  rustService.ts  tauriEmit.ts  tauriStore.ts  themeManagement.ts  webSocketService.ts
FileFlow_builds/macos/: ._fileflow.app
FileFlow_builds/macos/fileflow.app/: ._Contents
FileFlow_builds/macos/fileflow.app/Contents/: ._Info.plist  ._MacOS  ._Resources  Info.plist
file-manger/: package-lock.json  package.json
file-manger/src/: App.tsx
file-manger/src-tauri/: Cargo.toml  tauri.conf.json
file-manger/src-tauri/src/: main.rs
test/: package.json
test/src-tauri/: Cargo.toml  tauri.conf.json
(+69 files in other folders)
