[package]
name = "fileflow"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "fileflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [ ] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30.10"
opener = "0.7.0"
tauri-plugin-dialog = "2.0.0-beta.6"
async-std = "1.12.0"
futures = "0.3.30"
magic-wormhole = "0.6.1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-store = "2.0.0-beta.6"
lazy_static = "1.4.0"
dialog = "0.3.0"
whoami = "1.5.1"
fs_extra = "1.3.0"
winapi = "0.3.9"
chrono = "0.4.38"
log = "0.4"
log4rs = "1.0"
notify-debouncer-full = "0.3.1"
notify = "6.1.1"
zip = "2.1.0"
ignore = "0.4.22"
rust_search = "2.1.0"
tauri-plugin-log = "2.0.0-beta.6"
tauri-plugin-fs = "2.0.0-beta.9"
